Criação do controller CalcController.js

--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
     <div class="center">
         <div id="calculadora">
             <header>
-                <div id="display">
-                    0
-                </div>
+                <div id="display">0</div>
             </header>
             <section class="container">
                 <div class="row">
@@ -117,5 +115,7 @@
         </div>
     </div>
 
+    <script src="scripts/controller/CalcController.js"></script>
+    <script src="scripts/calculator.js"></script>
 </body>
 </html>
